syntax = "proto3";

package customertobranch;

// Message for customer transactions(deposit, withdraw or query)
message TransactionRequest {
    int32 branchId = 1;
    int32 clock = 2;
    int32 customerRequestId = 3;
    int32 amount = 4;
}

message TransactionResponse {
    bool success = 1;
    int32 balance = 2;
}

// Service for customer operations on a branch
service CustomerToBranch {
    rpc deposit(TransactionRequest) returns (TransactionResponse);
    rpc withdraw(TransactionRequest) returns (TransactionResponse);
    rpc query(TransactionRequest) returns (TransactionResponse);
}